WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60834
[Qt][GTK] plugins/get-url-with-javascript-url.html fails
https://bugs.webkit.org/show_bug.cgi?id=60834
Summary
[Qt][GTK] plugins/get-url-with-javascript-url.html fails
Csaba Osztrogonác
Reported
2011-05-14 01:42:37 PDT
plugins/get-url-with-javascript-url.html introduced in
http://trac.webkit.org/changeset/86467
and fail on GTK and Qt too:
http://build.webkit.org/results/Qt%20Linux%20Release/r86482%20%2832841%29/plugins/get-url-with-javascript-url-pretty-diff.html
http://build.webkit.org/results/GTK%20Linux%2032-bit%20Release/r86481%20%2813736%29/plugins/get-url-with-javascript-url-pretty-diff.html
Attachments
Patch
(4.15 KB, patch)
2011-05-15 09:52 PDT
,
Robert Hogan
tonikitoo
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2011-05-14 01:49:06 PDT
skipped by
http://trac.webkit.org/changeset/86483
(on Qt)
Robert Hogan
Comment 2
2011-05-15 09:52:04 PDT
Created
attachment 93586
[details]
Patch
WebKit Commit Bot
Comment 3
2011-05-19 12:42:46 PDT
Comment on
attachment 93586
[details]
Patch Rejecting
attachment 93586
[details]
from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-8', 'apply-..." exit_code: 2 Last 500 characters of output: 04. 1 out of 1 hunk FAILED -- saving rejects to file LayoutTests/platform/qt/Skipped.rej patching file Tools/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Tools/DumpRenderTree/unix/TestNetscapePlugin/TestNetscapePlugin.cpp Hunk #1 succeeded at 195 (offset 11 lines). Hunk #2 succeeded at 213 (offset 11 lines). Hunk #3 succeeded at 253 (offset 11 lines). Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--reviewer', u'Antonio Gomes', u'--fo..." exit_code: 1 Full output:
http://queues.webkit.org/results/8720074
Robert Hogan
Comment 4
2011-05-19 13:40:10 PDT
Committed
r86887
: <
http://trac.webkit.org/changeset/86887
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug