2011-05-15  Robert Hogan  <robert@webkit.org>

Reviewed by Antonio Gomes.

        [Qt][GTK] plugins/get-url-with-javascript-url.html fails
        https://bugs.webkit.org/show_bug.cgi?id=60834
        Fix unix test plugin for plugins/get-url-with-javascript-url.html

        * platform/qt/Skipped:
2011-05-15  Robert Hogan  <robert@webkit.org>

        Reviewed by Antonio Gomes.

        [Qt][GTK] plugins/get-url-with-javascript-url.html fails
        https://bugs.webkit.org/show_bug.cgi?id=60834
        Fix unix test plugin for plugins/get-url-with-javascript-url.html

        * DumpRenderTree/unix/TestNetscapePlugin/TestNetscapePlugin.cpp:
        (webkit_test_plugin_new_stream):
        (webkit_test_plugin_write_ready):
        (webkit_test_plugin_write):

Canonical link: https://commits.webkit.org/76509@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86887 268f45cc-cd09-0410-ab3c-d52691b4dbfc